--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,14 @@
   "description": "\"Server Side of CR-CRM\"",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "Bhavesh K. Kothari",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.12.14"
+    "mongoose": "^5.12.14",
+    "nodemon": "^2.0.7"
   }
 }
