--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-bootstrap-icons": "^1.5.0",
     "react-confirm-bootstrap": "^5.3.1",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
