--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.4.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-icons": "^1.5.0",
+    "react-chartjs-2": "^3.0.3",
     "react-confirm-bootstrap": "^5.3.1",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
